--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-          hello everyone, this is Neeraj Shrivastav , a ameature web developer and completing my courses in mmmut as a web developer.
+          hello everyone, this is Shubham Kumar Gupta , a ameature web developer and completing my courses in mmmut as a web developer.
           beside web development i have the idea of coding language that include C C++.
           </p>
 
